# Bend2

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROMPT  README.md  STYLEGUIDE.md  aff.bend  bend.cabal  bug.bend  cabal.project  problem_2_tmp
app/: Main.hs
docs/: inductive-datatypes.md  proper-case-trees.md  syntax.md
examples/: ai_examples.bend  main.bend  prompt.bend  t0.bend
examples/dependent/: dep_app.bend  error.bend  is_even_pair.bend  qsort.bend
examples/syntax/: add_assoc.bend  add_comm.bend  and1.bend  and_assoc.bend  and_idemp.bend  cong_double_half.bend  cong_double_half_simpler.bend  de_morgan.bend  double_neg.bend  factorial.bend  if.bend  inj_left.bend  is_even_identical.bend  length_appended_eq.bend  list_append.bend  list_head1.bend  mul2_even.bend  neg_impl.bend  not.bend  or_idemp.bend
examples/synth/: add.bend  apply_nat_fn.bend  bit_and.bend  bit_ccnot.bend  bit_cnot.bend  bit_eq.bend  bit_if.bend  bit_impl.bend  bit_neg.bend  bit_not.bend  bit_or.bend  bit_xor.bend  bits_and.bend  bits_count_set.bend  bits_hamming.bend  bits_is_set_at.bend  bits_parity_with_cnot.bend  bits_set_at.bend  bits_swap12.bend  copy_to_pair.bend  div_with_sub.bend  dup.bend  flatten_matrix.bend  gt.bend  injection_left.bend  is_even.bend  leq.bend  list_append.bend  list_at.bend  list_concat.bend  list_drop.bend  list_even_parity.bend  list_head.bend  list_inc.bend  list_length.bend  list_max.bend  list_replicate.bend  list_rev_with_append.bend  list_reverse.bend  list_tail.bend  (+35 more)
fixme/: add_for_import.bend  bug1.bend  bug10.bend  bug11.bend  bug12.bend  bug13.bend  bug14.bend  bug15.bend  bug15_2.bend  bug16.bend  bug17.bend  bug18.bend  bug19.bend  bug2.bend  bug20.bend  bug21.bend  bug22.bend  bug23.bend  bug24.bend  bug25.bend  bug26.bend  bug27.bend  bug28.bend  bug29.bend  bug3.bend  bug30.bend  bug4.bend  bug5.bend  bug6.bend  bug7.bend  bug8.bend  bug9.bend
src/Core/: Adjust.hs  AutoImport.hs  Bind.hs  Bridge.hs  CLI.hs  Check.hs  Cli.hs  Collapse.hs  Deps.hs  Equal.hs  EtaForm.hs  Eval.hs  Flatten.hs  FreeVars.hs  Import.hs  LHS.hs  Move.hs  Normal.hs  Parse.hs  Rewrite.hs  Show.hs  Sort.hs  Synthesis.hs  Termination.hs  Type.hs  Unification.hs  UnificationIntegration.hs  Vars.hs  WHNF.hs
src/Package/: Index.hs
test/: ConstructorCorruptionTest.hs  Main.hs  PatternCorruptionTest.hs  README.md  SpecificCorruptionTest.hs  Test.hs
test/tests/: BasicTest.hs  ErrorTest.hs  bugfix_U32_U64_mismatch.hs  bugfix_alias_redeclaration_discrepancy.hs  bugfix_annotated_lambda_help_infer.hs  bugfix_annotated_lambda_inline_assignment.hs  bugfix_assignment_vars_not_in_ctx.hs  bugfix_cant_infer_indirectly_derived_empty.hs  bugfix_cant_infer_pair_proj_assign.hs  bugfix_cant_infer_string.hs  bugfix_eta_reduce_nested_pats.hs  bugfix_expected_body.hs  bugfix_finally.hs  bugfix_gen_keyword.hs  bugfix_hvm_sups_dups_translation.hs  bugfix_incorrect_ann_checks.hs  bugfix_infix_nat_add_shouldnt_be_op2.hs  bugfix_mismatch_cong_finally.hs  bugfix_mismatch_default_case.hs  bugfix_mismatch_dependent_pair.hs  bugfix_mismatch_set_and_bool_isnt_unit.hs  bugfix_mismatch_type_from_def.hs  bugfix_missing_constructor_bad_error.hs  bugfix_nat_op2_missing.hs  bugfix_nested_pat_match_same_scrutinee.hs  bugfix_nested_pat_on_ctors.hs  bugfix_pair_type_sugar_parsing.hs  (+118 more)
(+24 files in other folders)
