cabal-version:      3.14
name:               bend
version:            0.1.0.0
homepage:           https://higherorderco.com/
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         taelin@higherorderco.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall
                 -Wno-unused-matches
                 -Wno-name-shadowing
                 -Wno-unused-local-binds
                 -Wno-unused-imports
                 -Wno-x-partial

library
    import:           warnings
    exposed-modules:  Core.Type,
                      Core.Adjust,
                      Core.Bind,
                      Core.CLI,
                      Core.Check,
                      Core.Collapse,
                      Core.Deps,
                      Core.Equal,
                      Core.EtaForm,
                      Core.Flatten,
                      Core.Import,
                      Core.LHS,
                      Core.Parse,
                      Core.Parse.Book,
                      Core.Parse.Term,
                      Core.Parse.WithSpan,
                      Core.Rewrite,
                      Core.Termination,
                      Core.WHNF,
                      Target.HVM,
                      Target.JavaScript
    build-depends:    base ^>= 4.21.0.0,
                      hs-highlight == 1.0.5,
                      containers == 0.7,
                      http-conduit,
                      aeson,
                      bytestring,
                      text,
                      time,
                      case-insensitive,
                      filepath==1.5.4.0,
                      directory==1.3.9.0,
                      megaparsec == 9.7.0,
                      mtl == 2.3.1,
                      file-embed,
                      HVM,
                      process,
                      vector
    hs-source-dirs:   src
    default-language: GHC2024

executable bend
    import:           warnings
                      -- do not change this on main branch
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0,
                      bend,
                      containers==0.7,
                      http-conduit,
                      aeson,
                      bytestring,
                      case-insensitive,
                      filepath==1.5.4.0,
                      directory==1.3.9.0,
                      time == 1.14,
                      megaparsec ==9.7.0,
                      file-embed,
                      HVM
    hs-source-dirs:   app
    default-language: GHC2024

-- executable bend-test
--     import:           warnings
                      -- do not change this on main branch
--     main-is:          OldMain.hs
--     build-depends:    base ^>=4.21.0.0,
--                       bend,
--                       containers==0.7,
--                       filepath==1.5.4.0,
--                       directory==1.3.9.0,
--                       time == 1.14,
--                       megaparsec ==9.7.0,
--                       HVM
--     hs-source-dirs:   app
--     default-language: GHC2024
